--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
         <svg class="icon" viewBox="0 0 24 24"><path d="m21.44 11.05-9.19 9.19a6 6 0 0 1-8.49-8.49l8.57-8.57A4 4 0 1 1 18 8.84l-8.59 8.57a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg>
         Capture
       </button>
-      <button class="tab-button" data-tab="settings">
+      <button class="tab-button" data-tab="settings" disabled>
         <svg class="icon" viewBox="0 0 24 24">
           <path
             d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 0 2l-.15.08a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.38a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1 0-2l.15-.08a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
@@ -24,35 +24,42 @@
 
     <main>
       <div id="capture" class="tab-content active">
-        <div class="control-panel">
-          <div class="preset-filter">
-            <label for="activePreset" class="control-label">Active Filter:</label>
-            <select id="activePreset" class="preset-select">
-              <option value="default">Default (Capture All)</option>
-              <option value="tiktok">TikTok</option>
-              <option value="facebook">Facebook</option>
-            </select>
-          </div>
+        <div class="filter-section">
+          <details>
+            <summary>Custom Overrides</summary>
+            <div class="details-content">
+              <label for="overrideKeywords">HTTP Keywords (mỗi từ khóa một dòng):</label>
+              <textarea id="overrideKeywords"></textarea>
 
-          <!-- <div id="currentDomain" style="text-align: center; font-size: 12px; color: #666; margin: 8px 0">Current domain: loading...</div> -->
+              <label for="overrideKeywordsWS">WebSocket Keywords (mỗi từ khóa một dòng):</label>
+              <textarea id="overrideKeywordsWS"></textarea>
+            </div>
 
-          <div id="copyAllContainer" class="capture-header" style="justify-content: center; gap: 8px">
-            <button id="reloadButton" class="copy-button" style="display: none; height: 42px; padding: 8px; font-size: 14px; width: 42px" title="Reload data for current page">
-              <svg class="button-icon" width="20" height="20" viewBox="0 0 0.5 0.5" aria-hidden="true" focusable="false">
-                <path
-                  fill="#fff"
-                  d="M0.482 0.3a0.018 0.018 0 0 1 0.018 0.018v0.08a0.018 0.018 0 0 1 -0.017 0.018 0.018 0.018 0 0 1 -0.017 -0.018v-0.028C0.419 0.446 0.335 0.5 0.244 0.5c-0.11 0 -0.203 -0.068 -0.243 -0.173a0.018 0.018 0 0 1 0.01 -0.023c0.009 -0.004 0.019 0.001 0.023 0.01 0.035 0.092 0.115 0.15 0.21 0.15 0.084 0 0.163 -0.055 0.2 -0.129l-0.037 0a0.018 0.018 0 0 1 -0.018 -0.018 0.018 0.018 0 0 1 0.017 -0.018zm-0.226 -0.3c0.11 0 0.203 0.068 0.243 0.173a0.018 0.018 0 0 1 -0.01 0.023 0.017 0.017 0 0 1 -0.023 -0.01c-0.035 -0.092 -0.115 -0.15 -0.21 -0.15 -0.084 0 -0.163 0.055 -0.2 0.129l0.037 0a0.018 0.018 0 0 1 0.018 0.018 0.018 0.018 0 0 1 -0.017 0.018L0.018 0.2A0.018 0.018 0 0 1 0 0.182V0.102c0 -0.01 0.008 -0.018 0.017 -0.018s0.017 0.008 0.017 0.018v0.028C0.081 0.054 0.165 0 0.256 0"
-                />
-              </svg>
-            </button>
-            <button id="copyAllButton" class="copy-button" style="height: 42px; padding: 8px; font-size: 14px; width: 100px" title="Copy all captured data as JSON">Copy All</button>
-          </div>
+            <div class="button-container" style="margin-bottom: 10px">
+              <button id="saveAndReloadBtn" class="button">Save and Reload</button>
+              <span id="status"></span>
+            </div>
+          </details>
         </div>
 
         <div class="capture-section">
           <div class="capture-header">
-            <h3 class="capture-title">HTTP Request</h3>
-            <button id="copyHttpButton" class="copy-button" title="Copy HTTP data as JSON">Copy JSON</button>
+            <div class="capture-header-left">
+              <h3 class="capture-title">HTTP Request</h3>
+              <div class="data-timestamp" style="color: #666; font-size: 11px; margin-top: 4px"></div>
+              <!-- <button id="copyHttpButton" class="copy-button" title="Copy HTTP data as JSON">Copy JSON</button> -->
+            </div>
+            <div id="copyAllContainer" class="capture-header" style="justify-content: center; gap: 8px">
+              <button id="reloadButton" class="copy-button" style="display: none; height: 42px; padding: 8px; font-size: 14px; width: 42px" title="Reload data for current page">
+                <svg class="button-icon" width="20" height="20" viewBox="0 0 0.5 0.5" aria-hidden="true" focusable="false">
+                  <path
+                    fill="#fff"
+                    d="M0.482 0.3a0.018 0.018 0 0 1 0.018 0.018v0.08a0.018 0.018 0 0 1 -0.017 0.018 0.018 0.018 0 0 1 -0.017 -0.018v-0.028C0.419 0.446 0.335 0.5 0.244 0.5c-0.11 0 -0.203 -0.068 -0.243 -0.173a0.018 0.018 0 0 1 0.01 -0.023c0.009 -0.004 0.019 0.001 0.023 0.01 0.035 0.092 0.115 0.15 0.21 0.15 0.084 0 0.163 -0.055 0.2 -0.129l-0.037 0a0.018 0.018 0 0 1 -0.018 -0.018 0.018 0.018 0 0 1 0.017 -0.018zm-0.226 -0.3c0.11 0 0.203 0.068 0.243 0.173a0.018 0.018 0 0 1 -0.01 0.023 0.017 0.017 0 0 1 -0.023 -0.01c-0.035 -0.092 -0.115 -0.15 -0.21 -0.15 -0.084 0 -0.163 0.055 -0.2 0.129l0.037 0a0.018 0.018 0 0 1 0.018 0.018 0.018 0.018 0 0 1 -0.017 0.018L0.018 0.2A0.018 0.018 0 0 1 0 0.182V0.102c0 -0.01 0.008 -0.018 0.017 -0.018s0.017 0.008 0.017 0.018v0.028C0.081 0.054 0.165 0 0.256 0"
+                  />
+                </svg>
+              </button>
+              <button id="copyAllButton" class="copy-button" style="height: 42px; padding: 8px; font-size: 14px; width: 100px" title="Copy all captured data as JSON">Copy All</button>
+            </div>
           </div>
           <div id="http-output">
             <p class="no-request">No HTTP request captured yet.</p>
@@ -64,14 +71,14 @@
         <div class="capture-section">
           <div class="capture-header">
             <h3 class="capture-title">WebSocket</h3>
-            <button id="copyWsButton" class="copy-button" title="Copy WebSocket data as JSON">Copy JSON</button>
+            <!-- <button id="copyWsButton" class="copy-button" title="Copy WebSocket data as JSON">Copy JSON</button> -->
           </div>
           <div id="ws-output">
             <p class="no-request">No WebSocket handshake captured yet.</p>
           </div>
         </div>
       </div>
-      <div id="settings" class="tab-content">
+      <!-- <div id="settings" class="tab-content">
         <h3>Presets</h3>
         <div class="preset-options">
           <input type="radio" id="preset-none" name="preset" value="default" checked />
@@ -99,7 +106,7 @@
           <button id="saveButton" class="button">Save Settings</button>
           <span id="status"></span>
         </div>
-      </div>
+      </div> -->
     </main>
 
     <script src="popup.js"></script>
