fix catch error

--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,7 @@
           <div class="capture-header">
             <div class="capture-header-left">
               <h3 class="capture-title">HTTP Request</h3>
-              <div class="data-timestamp" style="color: #666; font-size: 11px; margin-top: 4px"></div>
+              <div class="data-timestamp" style="color: #666; font-size: 11px"></div>
               <!-- <button id="copyHttpButton" class="copy-button" title="Copy HTTP data as JSON">Copy JSON</button> -->
             </div>
             <div id="copyAllContainer" class="capture-header" style="justify-content: center; gap: 8px">
